--- a/mumble_rest/templates/mumble_rest/index.html
+++ b/mumble_rest/templates/mumble_rest/index.html
@@ -144,7 +144,7 @@
         <div>
           <h3 class="float-md-start mb-0">Mumble Auth</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
-            {% if debug %}
+            {% if debug or user.is_superuser %}
                 <a
                 class="nav-link fw-bold py-1 px-0 active"
                 aria-current="page"
